plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group
base.archivesName = project.archives_base_name

loom {
    splitEnvironmentSourceSets()

    mods {
        "wha-magic" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

tasks.register("promoteSample", JavaExec) {
	group = "development"
	description = "Preview and promote an F5 recording into an explicitly classified fixture"
	dependsOn classes
	classpath = sourceSets.main.runtimeClasspath
	mainClass = "com.maxello1.whamagic.dev.SamplePromotionTool"
	standardInput = System.in
	if (project.hasProperty("sample")) {
		args project.property("sample")
	}
	if (project.hasProperty("previewOnly")) {
		args "--preview-only"
	}
}

java {
	withSourcesJar()

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName" }
	}
	from("THIRD_PARTY_NOTICES.md")
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}
}

test {
	useJUnitPlatform()
}
